# better-takproto

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
proto/: tak.proto
src/takproto/: __init__.py  takproto.py
