[project]
name = "better-takproto"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["betterproto"]

[[project.authors]]
name = "Raub Camaioni"

[[project.maintainers]]
name = "Raub Camaioni"

[project.license]
file = "LICENSE"

[tool.setuptools.dynamic]
version = {attr = "takproto.__version__"}

[tool.ruff]
line-length = 120
ignore = [ "F403", "F405", "F401",]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true